// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Book IconButtons shows the unowned icon for an unowned book 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-card-1111   MuiPaper-rounded"
  >
    <div
      class="makeStyles-header-1113 makeStyles-headerUnread-1115"
      data-testid="header"
    >
      <div
        class="MuiCardHeader-root makeStyles-cardHeader-1118"
      >
        <div
          class="MuiCardHeader-avatar makeStyles-avatar-1120"
        >
          <p
            class="MuiTypography-root MuiTypography-body2"
          >
            NaN
          </p>
        </div>
        <div
          class="MuiCardHeader-content makeStyles-headerContent-1119"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-alignCenter"
          >
            The Happiest Toddler on the Block
          </p>
        </div>
        <div
          class="MuiCardHeader-action makeStyles-iconButton-1117"
        >
          <button
            aria-label="unowned"
            class="MuiButtonBase-root MuiIconButton-root"
            data-testid="ownedIcon"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 5.69l5 4.5V18h-2v-6H9v6H7v-7.81l5-4.5M12 3L2 12h3v8h6v-6h2v6h6v-8h3L12 3z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption MuiTypography-alignCenter"
      >
        Toddler, Parenting
      </span>
    </div>
    <img
      class="MuiCardMedia-root MuiCardMedia-media makeStyles-media-1116"
      src="http://books.google.com/books/content?id=njQpY18IazsC&printsec=frontcover&img=1&zoom=1&source=gbs_api"
      title="The Happiest Toddler on the Block"
    />
    <div
      class="MuiCardContent-root"
    >
      <p
        class="MuiTypography-root makeStyles-description-1121 MuiTypography-caption MuiTypography-colorTextSecondary"
      >
        The pediatrician-author of The Happiest Baby on the Block offers parents a groundbreaking new approach for dealing with toddlers, drawing a parallel between a child's development and humankind's journey to civilization and presenting specific behavioral techniques designed to enhance parent-child communication, alleviate tantrums, and increase positive relationships. Reprint. 60,000 first printing.
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="editButton"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-expand-1122"
          data-testid="expandButton"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="deleteButton"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Book expand expands on handleExpandClick 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-card-889 makeStyles-expanded-902  MuiPaper-rounded"
  >
    <div
      class="makeStyles-header-891 makeStyles-headerUnread-893"
      data-testid="header"
    >
      <div
        class="MuiCardHeader-root makeStyles-cardHeader-896"
      >
        <div
          class="MuiCardHeader-avatar makeStyles-avatar-898"
        >
          <p
            class="MuiTypography-root MuiTypography-body2"
          >
            NaN
          </p>
        </div>
        <div
          class="MuiCardHeader-content makeStyles-headerContent-897"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-alignCenter"
          >
            The Happiest Toddler on the Block
          </p>
        </div>
        <div
          class="MuiCardHeader-action makeStyles-iconButton-895"
        >
          <button
            aria-label="owned"
            class="MuiButtonBase-root MuiIconButton-root"
            data-testid="ownedIcon"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption MuiTypography-alignCenter"
      >
        Toddler, Parenting
      </span>
    </div>
    <img
      class="MuiCardMedia-root MuiCardMedia-media makeStyles-media-894"
      src="http://books.google.com/books/content?id=njQpY18IazsC&printsec=frontcover&img=1&zoom=1&source=gbs_api"
      title="The Happiest Toddler on the Block"
    />
    <div
      class="MuiCardContent-root"
    >
      <p
        class="MuiTypography-root makeStyles-description-899 MuiTypography-caption MuiTypography-colorTextSecondary"
      >
        The pediatrician-author of The Happiest Baby on the Block offers parents a groundbreaking new approach for dealing with toddlers, drawing a parallel between a child's development and humankind's journey to civilization and presenting specific behavioral techniques designed to enhance parent-child communication, alleviate tantrums, and increase positive relationships. Reprint. 60,000 first printing.
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="editButton"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-expandOpen-903"
          data-testid="expandButton"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="deleteButton"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiCollapse-container"
      style="min-height: 0px; height: 0px; transition-duration: 0ms;"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        >
          <div
            class="MuiCardContent-root"
          >
            <div
              class="MuiTypography-root MuiTypography-caption"
            >
              Amazon Rating: 4.2
            </div>
            <div
              class="MuiTypography-root MuiTypography-caption"
            >
              Goodreads Rating: 3.5
            </div>
            <div
              class="MuiTypography-root MuiTypography-caption"
            >
              Amazon Review: 611
            </div>
            <div
              class="MuiTypography-root MuiTypography-caption"
            >
              Goodreads Review: 5451
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Book render renders as expected with read property 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-card-667   MuiPaper-rounded"
  >
    <div
      class="makeStyles-header-669 makeStyles-headerRead-670"
      data-testid="header"
    >
      <div
        class="MuiCardHeader-root makeStyles-cardHeader-674"
      >
        <div
          class="MuiCardHeader-avatar makeStyles-avatar-676"
        >
          <p
            class="MuiTypography-root MuiTypography-body2"
          >
            NaN
          </p>
        </div>
        <div
          class="MuiCardHeader-content makeStyles-headerContent-675"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-alignCenter"
          >
            The Happiest Toddler on the Block
          </p>
        </div>
        <div
          class="MuiCardHeader-action makeStyles-iconButton-673"
        >
          <button
            aria-label="owned"
            class="MuiButtonBase-root MuiIconButton-root"
            data-testid="ownedIcon"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption MuiTypography-alignCenter"
      >
        Toddler, Parenting
      </span>
    </div>
    <img
      class="MuiCardMedia-root MuiCardMedia-media makeStyles-media-672"
      src="http://books.google.com/books/content?id=njQpY18IazsC&printsec=frontcover&img=1&zoom=1&source=gbs_api"
      title="The Happiest Toddler on the Block"
    />
    <div
      class="MuiCardContent-root"
    >
      <p
        class="MuiTypography-root makeStyles-description-677 MuiTypography-caption MuiTypography-colorTextSecondary"
      >
        The pediatrician-author of The Happiest Baby on the Block offers parents a groundbreaking new approach for dealing with toddlers, drawing a parallel between a child's development and humankind's journey to civilization and presenting specific behavioral techniques designed to enhance parent-child communication, alleviate tantrums, and increase positive relationships. Reprint. 60,000 first printing.
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="editButton"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-expand-678"
          data-testid="expandButton"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="deleteButton"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Book render should render as expected 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-card-1   MuiPaper-rounded"
  >
    <div
      class="makeStyles-header-3 makeStyles-headerUnread-5"
      data-testid="header"
    >
      <div
        class="MuiCardHeader-root makeStyles-cardHeader-8"
      >
        <div
          class="MuiCardHeader-avatar makeStyles-avatar-10"
        >
          <p
            class="MuiTypography-root MuiTypography-body2"
          >
            NaN
          </p>
        </div>
        <div
          class="MuiCardHeader-content makeStyles-headerContent-9"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-alignCenter"
          >
            The Happiest Toddler on the Block
          </p>
        </div>
        <div
          class="MuiCardHeader-action makeStyles-iconButton-7"
        >
          <button
            aria-label="owned"
            class="MuiButtonBase-root MuiIconButton-root"
            data-testid="ownedIcon"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption MuiTypography-alignCenter"
      >
        Toddler, Parenting
      </span>
    </div>
    <img
      class="MuiCardMedia-root MuiCardMedia-media makeStyles-media-6"
      src="http://books.google.com/books/content?id=njQpY18IazsC&printsec=frontcover&img=1&zoom=1&source=gbs_api"
      title="The Happiest Toddler on the Block"
    />
    <div
      class="MuiCardContent-root"
    >
      <p
        class="MuiTypography-root makeStyles-description-11 MuiTypography-caption MuiTypography-colorTextSecondary"
      >
        The pediatrician-author of The Happiest Baby on the Block offers parents a groundbreaking new approach for dealing with toddlers, drawing a parallel between a child's development and humankind's journey to civilization and presenting specific behavioral techniques designed to enhance parent-child communication, alleviate tantrums, and increase positive relationships. Reprint. 60,000 first printing.
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="editButton"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-expand-12"
          data-testid="expandButton"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="deleteButton"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Book render should render as expected if there are differences 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-card-445  makeStyles-different-446 MuiPaper-rounded"
  >
    <div
      class="makeStyles-header-447 makeStyles-headerUnread-449"
      data-testid="header"
    >
      <div
        class="MuiCardHeader-root makeStyles-cardHeader-452"
      >
        <div
          class="MuiCardHeader-avatar makeStyles-avatar-454"
        >
          <p
            class="MuiTypography-root MuiTypography-body2"
          >
            NaN
          </p>
        </div>
        <div
          class="MuiCardHeader-content makeStyles-headerContent-453"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-alignCenter"
          >
            The Happiest Toddler on the Block
          </p>
        </div>
        <div
          class="MuiCardHeader-action makeStyles-iconButton-451"
        >
          <svg
            aria-hidden="true"
            aria-label="Differences"
            class="MuiSvgIcon-root"
            currentitem="false"
            data-for="differencesIcon-9780553381436"
            data-tip="true"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 2H4c-1.1 0-2 .9-2 2v18l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm0 14H5.17L4 17.17V4h16v12zM11 5h2v6h-2zm0 8h2v2h-2z"
            />
          </svg>
          <div
            class="__react_component_tooltip place-top type-dark "
            data-id="tooltip"
            id="differencesIcon-9780553381436"
          >
            <span>
              title old title -&gt; The Happiest Toddler on the Block
              <br />
            </span>
            <span>
              amazonRatingsCount 123 -&gt; 611
              <br />
            </span>
          </div>
        </div>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption MuiTypography-alignCenter"
      >
        Toddler, Parenting
      </span>
    </div>
    <img
      class="MuiCardMedia-root MuiCardMedia-media makeStyles-media-450"
      src="http://books.google.com/books/content?id=njQpY18IazsC&printsec=frontcover&img=1&zoom=1&source=gbs_api"
      title="The Happiest Toddler on the Block"
    />
    <div
      class="MuiCardContent-root"
    >
      <p
        class="MuiTypography-root makeStyles-description-455 MuiTypography-caption MuiTypography-colorTextSecondary"
      >
        The pediatrician-author of The Happiest Baby on the Block offers parents a groundbreaking new approach for dealing with toddlers, drawing a parallel between a child's development and humankind's journey to civilization and presenting specific behavioral techniques designed to enhance parent-child communication, alleviate tantrums, and increase positive relationships. Reprint. 60,000 first printing.
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="editButton"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-expand-456"
          data-testid="expandButton"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="deleteButton"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Book render should render as expected if there is no thumbnail 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-card-223   MuiPaper-rounded"
  >
    <div
      class="makeStyles-header-225 makeStyles-headerUnread-227"
      data-testid="header"
    >
      <div
        class="MuiCardHeader-root makeStyles-cardHeader-230"
      >
        <div
          class="MuiCardHeader-avatar makeStyles-avatar-232"
        >
          <p
            class="MuiTypography-root MuiTypography-body2"
          >
            NaN
          </p>
        </div>
        <div
          class="MuiCardHeader-content makeStyles-headerContent-231"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-alignCenter"
          >
            The Happiest Toddler on the Block
          </p>
        </div>
        <div
          class="MuiCardHeader-action makeStyles-iconButton-229"
        >
          <button
            aria-label="owned"
            class="MuiButtonBase-root MuiIconButton-root"
            data-testid="ownedIcon"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption MuiTypography-alignCenter"
      >
        Toddler, Parenting
      </span>
    </div>
    <img
      class="MuiCardMedia-root MuiCardMedia-media makeStyles-media-228"
      src=" "
      title="The Happiest Toddler on the Block"
    />
    <div
      class="MuiCardContent-root"
    >
      <p
        class="MuiTypography-root makeStyles-description-233 MuiTypography-caption MuiTypography-colorTextSecondary"
      >
        The pediatrician-author of The Happiest Baby on the Block offers parents a groundbreaking new approach for dealing with toddlers, drawing a parallel between a child's development and humankind's journey to civilization and presenting specific behavioral techniques designed to enhance parent-child communication, alleviate tantrums, and increase positive relationships. Reprint. 60,000 first printing.
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="editButton"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-expand-234"
          data-testid="expandButton"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="deleteButton"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
